# SeeSharp

./: .editorconfig  .gitignore  BlendToSeeSharp.py  CMakeLists.txt  Fbx2Ply.dib  LICENSE  README.md  SeeSharp.sln  build_blender.bat  build_blender.sh  justfile  omnisharp.json  setup_env.sh
.github/workflows/: build.yml  release.yml
Benchmark/: Program.cs
BlenderExtension/: MANIFEST.in  setup.py
BlenderExtension/see_blender/: __init__.py  blender_manifest.toml  exporter.py  importer.py  material.py  render_engine.py  world.py
BlenderExtension/see_blender_link/: __init__.py  config.py
BlenderExtension/seesharp_binaries/: __init__.py
Core/: Core.csproj
Core.Benchmark/: Core.Benchmark.csproj
Core.Tests/Camera/: Perspective_Rays.cs
Core.Tests/Geometry/: Mesh_Attributes.cs  Mesh_Sampling.cs
Core.Tests/Sampling/: SampleWarp_Disc.cs  SampleWarp_Triangle.cs
Core.Tests/Shading/: Emitter_Glossy.cs
Core/Cameras/: Camera.cs  CameraRaySample.cs  CameraResponseSample.cs
Core/Datastructs/: NeighborPoint.cs
Core/Geometry/: BoundingBox.cs  Mesh.cs
Core/Shading/: Spectrum.cs
Data/Scenes/: simplebackground.json  sunsky.exr
Examples/: MisCompensation.dib  SphericalSampling.dib
Examples/BlenderSync/: BlenderSync.csproj  Imports.cs  Program.cs  _Imports.razor
ExperimentConfigTest/: Imports.cs  _Imports.razor
ExperimentConfigTest/Pages/: Experiment.razor  Experiment.razor.cs  Index.razor  _Host.cshtml
Experiments/: ExperimentConductor.cs
Integrators/: Integrators.csproj  PathTracer.cs
Integrators.Tests/: ClassicBidir_Mis_DirectIllum.cs  ClassicBidir_Mis_SingleBounce.cs
Integrators/Bidir/: PhotonHashGrid.cs  PhotonMapper.cs  TechPyramid.cs  VertexCacheBidir.cs  VertexConnectionAndMerging.cs
Integrators/Common/: CachedRandomWalk.cs  PathCache.cs
Integrators/Util/: PathLogger.cs  PathVisualizer.cs
MaterialTest/: Imports.cs  MaterialTest.csproj  Program.cs  _Imports.razor
MaterialTest/Pages/: Experiment.razor  Experiment.razor.cs  Index.razor  IntegratorTest.razor  IntegratorTest.razor.cs  _Host.cshtml
SeeSharp/: Imports.cs  Scene.cs  SeeSharp.csproj  extension.dib
SeeSharp.Benchmark/: GenericMaterial_Sampling.cs  NearestNeighborBench.cs  Program.cs  RunBench.fsx  SeeSharp.Benchmark.csproj  VectorBench.cs
SeeSharp.Blazor/: BoolSetting.razor  EnumSetting.razor  EnumSetting.razor.css  FlipBook.razor  FlipViewer.razor  FloatSetting.razor  GraphBrowser.razor  GraphBrowser.razor.css  HtmlProgressBar.razor  Imports.cs  IntSetting.razor  IntegratorSelector.razor  IntegratorSelector.razor.cs  IntegratorSelector.razor.css  IntegratorTree.razor  IntegratorTree.razor.cs  IntegratorTreeNode.razor  IntegratorUtils.cs  LogOutput.razor  LogOutput.razor.css  Readme.md  RenderSetting.razor  RotationInput.razor  SceneSelector.razor  SceneSelector.razor.cs  SceneSelector.razor.css  Scripts.cs  SeeSharp.Blazor.csproj  SettingBase.razor  SettingBase.razor.css  SettingsGroup.razor.css  StructSetting.razor  _Imports.razor
SeeSharp.Blender/: BlenderCommandSender.cs  BlenderEventDispatcher.cs  BlenderEventListener.cs  SeeSharp.Blender.csproj
SeeSharp.Examples/: Imports.cs  MakeFigure.py  MisCompensation.dib  PathVsVcm.cs  Program.cs  SeeSharp.Examples.csproj  SphericalSampling.dib
SeeSharp.IntegrationTests/: BidirPathLogger.cs  BidirZeroLightPaths.cs  ConsoleUtils.cs  LightProbeTest.cs  OutlierCacheTest.cs  Program.cs  SeeSharp.IntegrationTests.csproj
SeeSharp.PreviewRender/: Program.cs  SeeSharp.PreviewRender.csproj
SeeSharp.ReferenceManager/: Imports.cs  SeeSharp.ReferenceManager.csproj  _Imports.razor
SeeSharp.Templates/: README.md  SeeSharp.Templates.csproj
SeeSharp.Tests/: SeeSharp.Tests.csproj
SeeSharp.Tests/Core/: Imports.cs  (+3 more)
SeeSharp.ToMitsuba/: Program.cs  SeeSharp.ToMitsuba.csproj
SeeSharp.Validation/: Program.cs  SeeSharp.Validation.csproj  Validate_CornellBox.cs  Validate_DirectIllum.cs  Validate_DirectTransmit.cs  Validate_Environment.cs  Validate_GlossyLight.cs  Validate_MultiLight.cs  Validate_SingleBounce.cs  Validate_SingleBounceGlossy.cs  Validate_Textures.cs  ValidationSceneFactory.cs  Validator.cs
Tests/: BidirPathLogger.cs  Program.cs  Tests.csproj
Validation/: Program.cs  Validate_CornellBox.cs  Validate_DirectIllum.cs  Validate_Environment.cs  Validate_GlossyLight.cs  Validate_MultiLight.cs  Validate_SingleBounce.cs  Validate_SingleBounceGlossy.cs  Validation.csproj  Validator.cs
data/: pbrtConvert.py
docs/: doxyfile
see_blender/: __init__.py  blend_to_seesharp.py  blender_render.py  exporter.py  material.py  material_ui.py  ply.py  render_engine.py  world.py
src/: BlendToGround.py  BlendToSeeSharp.py  CMakeLists.txt
src/SeeCore/: CMakeLists.txt  seecore.h
src/SeeCore/api/: api.h  raytrace.cpp  raytrace.h  types.h
src/SeeCore/geometry/: raytrace.cpp  scene.cpp  scene.h
src/SeeCore/image/: image.cpp  image.h
src/examples/C++/: CMakeLists.txt  simplepath.cpp  simplequad.cpp
src/examples/Native/: CMakeLists.txt  simplepath.cpp
src/renderground/: CMakeLists.txt  renderground.cpp  renderground.h
src/renderground/api/: api.h  camera.cpp  camera.h  cpputils.h  imageio.cpp  imageio.h  internal.h  pathcache.cpp  pathcache.h  raytrace.cpp  raytrace.h  scenefiles.cpp  scenefiles.h  shading.cpp  shading.h  transforms.cpp  transforms.h  types.h
src/renderground/cameras/: camera.h  perspective.cpp  perspective.h
src/renderground/geometry/: float3.h  geometry.cpp  geometry.h  hit.h  mesh.cpp  mesh.h  ray.h  scene.cpp  scene.h  transform.cpp  transform.h
src/renderground/image/: image.cpp  image.h
src/renderground/math/: constants.h  distribution.h  float2.h  float3.h  float4.h  float4x4.h  wrap.h
src/renderground/shading/: emitter.cpp  emitter.h  generic.cpp  generic.h  shading.h
src/renderground/utility/: pathcache.cpp  pathcache.h
src/tests/: CMakeLists.txt  diffuse.cpp  shadingnormals.cpp  testutil.h  vertexattributes.cpp
src/tests/camera/: perspective.cpp
src/tests/emitter/: diffuse.cpp
src/tests/geometry/: shadingnormals.cpp
src/tests/shading/: furnace.cpp
src/tests/utility/: pathcache.cpp
(+628 files in other folders)
